--- a/aboly.html
+++ b/aboly.html
@@ -658,7 +658,7 @@ img.characterimg {
 <p> 韩愈《原道》：<span class="lyq">博爱之谓仁，行而宜之之谓义，由是而之焉之谓道，足乎己无所待于外之谓德。</span>（讲仁义道德。）</p>
 </li>
 <li>
-<p> 朱熹《四书集注》：<span class="lyq">仁者，爱之理，心之德也。</span>（讲体用：人之心是仁的本体，爱人利物是仁的功用。）</p>
+<p> 朱熹《四书集注》：<span class="lyq">仁者，爱之理，心之德也。</span>（讲体用：人心是仁的本体，爱人利物是仁的功用。）</p>
 </li>
 <li>
 <p> 康有为《孟子微》：<span class="lyq">不忍人之心，仁心也。不忍人之政，仁政也。&hellip;&hellip;<a href="#fu2">夫</a>仁者，相人偶之谓。</span>（讲仁政。<a id="ren3"></a>忍：残酷，残忍，用作动词，残忍对待，残害。人偶：动词，相亲相敬，像爱惜自己一样尊重他人的存在价值。偶：对等，同等。）</p>
@@ -757,11 +757,11 @@ img.characterimg {
 <ol>
 <li>
 <p>
-<a id="sanhuang"></a><a href="#xiachao">夏朝</a>以前，传说由<span class="lykeyword">三皇五帝</span>统治<a href="#tianxia">天下</a>。<span class="lykeyword">三皇</span>有7种说法，唐代司马贞《补史记&middot;三皇本纪》认为指伏羲、女娲、神农。他们的年代久远难考，估计在前6000年至前3000年间。<a id="huang2"></a><span class="lykeyword">皇</span>的本义为火光盛大明亮，当时体现为有功德于民，而非象征权威的称号。</p>
+<a id="sanhuang"></a><a href="#xiachao">夏朝</a>以前，传说由<span class="lykeyword">三皇五帝</span>统治<a href="#tianxia">天下</a>。<span class="lykeyword">三皇</span>有7种说法，唐代司马贞《补史记&middot;三皇本纪》认为指伏羲、女娲、神农。他们的年代久远难考，估计在前6000年至前3000年间。<a id="huang2"></a><span class="lykeyword">皇</span>的本义为火光盛大明亮，后人因他们德覆天下，称之为皇，而非在位时的称号。</p>
 </li>
 <li>
 <p>
-<a id="wudi"></a><span class="lykeyword">五帝</span>的时代约在前3000年至前2000年间，一般采用《史记&middot;五帝本纪》的说法，认为指黄帝、颛顼（<span class="lypinyin">zhuān xū</span>，黄帝之孙）、喾（<span class="lypinyin">k&ugrave;</span>，黄帝曾孙）、<a href="#yao">尧</a>、<a href="#shun">舜</a>。<span class="lykeyword">帝</span>是<a href="#di4">禘</a>的本字，这时开始成为称号，有了天下共主的含义。《论语》仅有 <a href="#20.1" class="lyref">20.1</a>  提到帝，指的是<a href="#shangdi">上帝</a>，而非人间统治者。</p>
+<a id="wudi"></a><span class="lykeyword">五帝</span>的时代约在前3000年至前2000年间，一般采用《史记&middot;五帝本纪》的说法，认为指黄帝、颛顼（<span class="lypinyin">zhuān xū</span>，黄帝之孙）、喾（<span class="lypinyin">k&ugrave;</span>，黄帝曾孙）、<a href="#yao">尧</a>、<a href="#shun">舜</a>。<span class="lykeyword">帝</span>是<a href="#di4">禘</a>的本字，德象天地曰帝，这时成为象征权威的称号，有了天下共主的含义。《论语》仅有 <a href="#20.1" class="lyref">20.1</a>  提到帝，指的是<a href="#shangdi">上帝</a>，而非人间统治者。</p>
 </li>
 <li>
 <p>
@@ -770,12 +770,12 @@ img.characterimg {
 <p>
 <a id="zhuhou"></a><span class="lykeyword">诸侯</span>拥有基本自治的<span class="lykeyword">封国</span>，定期向天子朝贡，在发生战争等大事时，听从天子的统一调遣。诸侯中的领袖称为<span class="lykeyword">伯</span>或<span class="lykeyword"><a href="#badao">霸</a></span>，地位仅次于天子。</p>
 <p>
-<a id="juewei"></a>周朝诸侯的<span class="lykeyword">爵位</span>分为<span class="lykeyword">公、侯、伯、子、男</span>5等（爵位的伯与诸侯之首的伯不是一回事）。大诸侯国中，只有<a href="#shangchao">殷</a>之后人的<a href="#songguo">宋</a>爵位是公。侯爵较多见（所以统称诸侯），如鲁（<a href="#zhougong">周公</a>的封国）、齐、（<a href="#jiangtaigong">吕尚</a>的封国）、燕（<a href="#shaogong">召公</a>的封国）。远离<a href="#zhongyuan">中原</a>的国家常被封为伯、子，如<a href="#qinbo">秦</a>为伯，楚、<a href="#tianzishiguan">郯</a>为子。男爵很罕见，如参与拥立<a href="#zhouyouwang">周平王</a>的许。<a href="#qihuangong">齐桓公</a>、<a href="#aigong">鲁哀公</a>等称呼，只是和谥号连用的惯例，不代表爵位。<span class="lyseealso"><span>【参】</span><span>《左传&middot;隐公元年》孔颖达正义：<span class="lyq">五等之爵虽尊卑殊号，臣子尊其君父，皆称为公，是礼之常也。</span></span></span>
+<a id="juewei"></a>周朝诸侯的<span class="lykeyword">爵位</span>分为<span class="lykeyword">公、侯、伯、子、男</span>5等（爵位的伯与诸侯之首的伯不是一回事）。大诸侯国中，只有<a href="#shangchao">殷</a>之后人的<a href="#songguo">宋</a>爵位是公。侯爵最多见（因此统称为诸侯），如鲁（<a href="#zhougong">周公</a>的封国）、齐、（<a href="#jiangtaigong">吕尚</a>的封国）、燕（<a href="#shaogong">召公</a>的封国）。远离<a href="#zhongyuan">中原</a>的国家常被封为伯、子，如<a href="#qinbo">秦</a>为伯，楚、<a href="#tianzishiguan">郯</a>为子。男爵很罕见，如参与拥立<a href="#zhouyouwang">周平王</a>的许。<a href="#qihuangong">齐桓公</a>、<a href="#aigong">鲁哀公</a>等称呼，只是和谥号连用的惯例，不代表爵位。<span class="lyseealso"><span>【参】</span><span>《左传&middot;隐公元年》孔颖达正义：<span class="lyq">五等之爵虽尊卑殊号，臣子尊其君父，皆称为公，是礼之常也。</span></span></span>
 </p>
 <p>
-<a id="jun1"></a>从天子到<a href="#qingdafushi">大夫</a>，无论势力大小，又都可以叫<span class="lykeyword">君</span>。这是有领地的统治者的通用头衔，就像不直接反映级别的&ldquo;老板&rdquo;。</p>
+<a id="jun1"></a>从天子到<a href="#qingdafushi">大夫</a>，无论势力大小，都可以叫<span class="lykeyword">君</span>。这是有领地的统治者的通用头衔，就像不直接反映级别的&ldquo;老板&rdquo;。</p>
 <p>
-<a href="#zhouchao">东周</a>时周王室暗弱，强大有野心的诸侯也会自封为王。由前704年偏处南方的楚国挑头，至战国中后期成为常态。</p>
+<a href="#zhouchao">东周</a>时周王室暗弱，强大有野心的诸侯也会自封为王。前704年偏处南方的楚国挑头，战国中后期成为常态。</p>
 </li>
 <li>
 <p>
@@ -867,11 +867,10 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="xianxianyise"></a><span class="lyterm">贤贤易色</span>：重贤轻色。第一个<span class="lyterm">贤</span>是动词，以&hellip;&hellip;为贤，尊崇，重视，value，honor；第二个是名词，德行才能，virtue。<span class="lyexample"><span>【例】</span><span>《史记&middot;梁孝王世家》：<span class="lyq"><a href="#shangchao">殷</a>道尊尊，<a href="#zhouchao">周</a>道<a href="#qinqin">亲亲</a>。</span>《三国志&middot;魏书&middot;武文世王公》裴松之注引魏宗室曹冏（<span class="lypinyin">jiǒng</span>）上书：<span class="lyq">古之王者，必建同<a href="#xingshi">姓</a>以明亲亲，必树异姓以明贤贤。&hellip;&hellip;非贤无与兴功，非亲无与辅治。</span>（建：指分封。）</span></span>
+<a id="xianxianyise"></a><span class="lyterm">贤贤易色</span>：重贤轻色。第一个<span class="lyterm">贤</span>是动词，以&hellip;&hellip;为贤，尊崇，重视，value，honor；第二个是名词，德行才能，virtue。<span class="lyexample"><span>【例】</span><span><a href="#11.16" class="lyref">11.16</a> <span class="lyq">师与商也孰贤？</span><a href="#6.11" class="lyref">6.11</a> <span class="lyq">贤哉回也！</span>《三国志&middot;魏书&middot;武文世王公》裴松之注引魏宗室曹冏（<span class="lypinyin">jiǒng</span>）上书：<span class="lyq">古之王者，必建同<a href="#xingshi">姓</a>以明亲亲，必树异姓以明贤贤。&hellip;&hellip;非贤无与兴功，非亲无与辅治。</span>（建：指分封。）《史记&middot;梁孝王世家》：<span class="lyq"><a href="#shangchao">殷</a>道尊尊，<a href="#zhouchao">周</a>道<a href="#qinqin">亲亲</a>。</span></span></span>
 </p>
 <p>
-<a id="xian2"></a>&ldquo;贤&rdquo;字从贝，本义为财富多，又泛指好。用于比较，表示胜（过），优（于）。用于人，表示才能佳，德行优。东汉许慎的《说文解字》就解释为<span class="lyq">多才也</span>。《三国志&middot;魏书&middot;武帝纪》载，建安十五年（210年）春，曹操颁布《求贤令》，明言天下未定，<span class="lyq">唯才是举</span>，不论出身与品行。在《论语》中，仅凭才能出众，是称不起&ldquo;贤人&rdquo;的，随着儒学主流地位的确立，<a href="#de2">德</a>成为贤的必要部分。《孟子&middot;公孙丑上》推崇<span class="lyq">贤者在位，能者在职</span>；南朝编著的《玉篇》将贤解释为<span class="lyq">有善行也</span>；《宋史&middot;叶梦得传》引叶梦得言：<span class="lyq">贤者，有德之称；能者，有才之称。故<a href="#xianwang">先王</a>常使德胜才，不使才胜德。</span>近代选拔干部，过多注重思想可靠，忽视业务能力，也许是这个古老理念的流弊。中国中央电视台2002年7月的《<a href="http://www.tudou.com/programs/view/WV6V2SNNgLU/" class="lyurl" target="_blank">对话</a>》节目中，陈章良（时任北京大学副校长）与李开复（时任微软公司全球副总裁）作为人才的供需两方，讨论了人才的首选标准、人品应该谁负责等话题，可以作为评价&ldquo;贤&rdquo;的现代版参考。阅读后文时，还可以留意贤与<a href="#ren2">仁</a>的区别。<span class="lyexample"><span>【例】</span><span><a href="#11.16" class="lyref">11.16</a> <span class="lyq">师与商也孰贤？</span><a href="#6.11" class="lyref">6.11</a> <span class="lyq">贤哉回也！</span></span></span>
-</p>
+<a id="xian2"></a>&ldquo;贤&rdquo;字从贝，本义为财富多，又泛指好。用于比较，表示胜（过），优（于）。用于人，表示才能佳，德行优。东汉许慎的《说文解字》就解释为<span class="lyq">多才也</span>。《三国志&middot;魏书&middot;武帝纪》载，建安十五年（210年）春，曹操颁布《求贤令》，明言天下未定，<span class="lyq">唯才是举</span>，不论出身与品行。在《论语》中，仅凭才能出众，是称不起&ldquo;贤人&rdquo;的，随着儒学主流地位的确立，<a href="#de2">德</a>成为贤的必要部分。《孟子&middot;公孙丑上》推崇<span class="lyq">贤者在位，能者在职</span>；南朝编著的《玉篇》将贤解释为<span class="lyq">有善行也</span>；《宋史&middot;叶梦得传》引叶梦得言：<span class="lyq">贤者，有德之称；能者，有才之称。故<a href="#xianwang">先王</a>常使德胜才，不使才胜德。</span>近代选拔干部，过多注重思想可靠，忽视业务能力，也许是这个古老理念的流弊。中国中央电视台2002年7月的《<a href="http://www.tudou.com/programs/view/WV6V2SNNgLU/" class="lyurl" target="_blank">对话</a>》节目中，陈章良（时任北京大学副校长）与李开复（时任微软公司全球副总裁）作为人才的供需两方，讨论了人才的首选标准、人品应该谁负责等话题，可以作为评价&ldquo;贤&rdquo;的现代版参考。阅读后文时，还可以留意贤与<a href="#ren2">仁</a>的区别。</p>
 <p>
 <a id="yi4g"></a><span class="lyterm">易</span>：动词，轻视。<span class="lyexample"><span>【例】</span><span>《史记&middot;高祖本纪》：<span class="lyq">高祖为亭长，素易诸吏。</span></span></span><span class="lyterm">色</span>：美貌。</p>
 <p>古注有把&ldquo;易色&rdquo;解释成端肃态度，或者把&ldquo;贤贤易色&rdquo;解释成以好色之心重贤，&ldquo;易&rdquo;就是替换，也讲得通，但从内容顺序看，说的更像是择偶标准。</p>
@@ -2239,14 +2238,14 @@ img.characterimg {
 <p>
 <span class="lyterm">巧笑倩（<span class="lypinyin">qi&agrave;n</span>）兮，美目盼兮，素以为绚（<span class="lypinyin">xu&agrave;n</span>）兮</span>。<span class="lyterm">巧笑</span>：精致美好的笑容。<span class="lyterm">倩</span>：口颊俏丽的样子，近似&ldquo;笑意盈盈&rdquo;的感觉。<span class="lyterm">盼</span>：眼睛黑白分明波光流转的样子，就像沈从文小说《雪晴》里<span class="lyq">黑而有光的眼睛</span>。<span class="lyterm">绚</span>：色彩丰富灿烂的样子。</p>
 <p>
-<span class="lyterm">巧笑倩兮，美目盼兮</span>出自《诗经&middot;卫风&middot;硕人》，是连续7句形容美人（<a href="#weijun">卫庄公</a>夫人庄姜）的末两句。<span class="lyterm">素以为绚兮</span>的出处则不可考，可能是当时《诗经》里有的，后来被删掉了，也可能是孔子或别人对前两句诗的评论，子夏请孔子进一步解释。</p>
+<span class="lyterm">巧笑倩兮，美目盼兮</span>出自《诗经&middot;卫风&middot;硕人》，是连续7句形容美人（<a href="#weijun">卫庄公</a>夫人庄姜）的末两句。<span class="lyterm">素以为绚兮</span>的出处则不可考，可能是当时《诗经》里有的，后来被删掉了，也可能是孔子或别人对前两句诗的评论，子夏请老师进一步解释。</p>
 </li>
 <li>
 <p>
 <span class="lyterm">绘事后素</span>：先有白底子才可以作画。<span class="lyterm">绘事</span>：绘画。表示技能的动词+&ldquo;事&rdquo;，是较文雅地指称该行为或工作。<span class="lyexample"><span>【例】</span><span><a href="#9.16" class="lyref">9.16</a> <span class="lyq">丧事不敢不勉</span>，现代汉语&ldquo;钟情译事多年&rdquo;。</span></span>
 </p>
 <p>
-<span class="lyterm">后</span>：动词，follow，A后B就是先B后A。它既可以指顺序的先后（如：先礼后兵），也能含有重要性的高低、关系的递进（如：<a href="#5.20">三思而后行</a>、<a href="#qiong2">穷</a>而后工），才引出了子夏的下一问。</p>
+<span class="lyterm">后</span>：动词，follow，A后B就是先B后A。它既可以指顺序的先后（如：先礼后兵），也能包含重要性的高低、关系的递进（如：<a href="#5.20" class="lyref">5.20</a> <span class="lyq">三思而后行</span>，<a href="#qiong2">穷</a>而后工），才引出了子夏的下一问。</p>
 </li>
 <li>
 <p>
@@ -2260,7 +2259,7 @@ img.characterimg {
 </li>
 </ul>
 <p>
-<span class="lyseealso"><span>【参】</span><span>南朝宋裴松之补注《三国志》，博采各家，兼有论辩，自成一体。他在《上三国志注表》中，强调素、质之外，绚、文也很重要：<span class="lyq"><a href="#qie4a">窃</a>惟绘事以众色成文，蜜蜂以兼采为味，故能使绚素有<a href="#zhang1">章</a>，甘<a href="#yu2d">逾</a><a href="#ben3">本</a><a href="#zhi4f">质</a>。</span>又见 <a href="#12.8" class="lyref">12.8</a> <a href="#zigong">子贡</a>的话。</span></span>
+<span class="lyseealso"><span>【参】</span><span>南朝宋裴松之在《上三国志注表》中说，素、质固然是根本，绚、文也有锦上添花的功用：<span class="lyq"><a href="#qie4a">窃</a>惟绘事以众色成文，蜜蜂以兼采为味，故能使绚素有<a href="#zhang1">章</a>，甘<a href="#yu2d">逾</a><a href="#ben3">本</a><a href="#zhi4f">质</a>。</span>又见 <a href="#12.8" class="lyref">12.8</a> <a href="#zigong">子贡</a>的话。</span></span>
 </p>
 </div>
 </div>
@@ -3206,7 +3205,7 @@ img.characterimg {
 </li>
 </ul>
 <p>
-<a href="#ren2">仁</a>是儒家的至高追求。实践上，<a href="#zhong1">忠</a>指做事（包括<a href="#3.19">事君</a>），恕指做人。根据曾子的解读，忠+恕=臻于仁的最佳途径。</p>
+<a href="#ren2">仁</a>是儒家的至高追求。实践上，<a href="#zhong1">忠</a>指做事（包括<a href="#3.19">事君</a>），恕指做人。根据曾子的解读，忠 + 恕 = 臻于仁的最佳途径。回忆 <a href="#1.2" class="lyref">1.2</a>  有子说，孝弟为仁之本。</p>
 <div class="lyseealso">
 <p>
 <span>【参】</span><span>《宋史&middot;范纯仁传》载，范仲淹之子、北宋名臣范纯仁<span class="lyq">性<a href="#yi2">夷</a>易宽简，不以声色加人，谊之所在，则挺然不少屈。&hellip;&hellip;尝曰：&ldquo;吾平生所学，得之&lsquo;忠恕&rsquo;二字，一生用不尽，以至立朝事君，接待僚友，亲睦宗族，未尝须臾离此也。&rdquo;每戒子弟曰：&ldquo;人虽至愚，<a href="#ze2a">责</a>人则明；虽有聪明，恕己则昏。<a href="#gou3a">苟</a>能以责人之心责己，恕己之心恕人，不患不至圣贤地位也。&rdquo;</span>（<a id="xuyu"></a>须臾（<span class="lypinyin">y&uacute;</span>）：片刻。<a id="yi4j"></a>谊：通&ldquo;<a href="#yi4">义</a>&rdquo;。）</span>
@@ -4871,7 +4870,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">井有仁焉</span>是宰予假设的场景，<span class="lyterm">从之</span>指跳下井去（宁愿淹死也要）追寻仁。古注多将&ldquo;仁&rdquo;解释为人或仁人，较牵强。这种活泛机辩的思维，是典型的宰予风格，早于战国时期以逻辑思辨著称的名家，然而并不为孔子喜欢，不认为是仁者正道。<span class="lyseealso"><span>【参】</span><span>孔子自己的表述是 <a href="#15.9" class="lyref">15.9</a> <span class="lyq">杀身以成仁</span>。比较《孟子&middot;告子上》：<span class="lyq">生，亦我所欲也，义，亦我所欲也，二者不可得兼，舍生而取义者也。</span>《荀子&middot;非十二子》批评名家：<span class="lyq">不法<a href="#xianwang">先王</a>，不是礼义，而好治怪说、玩琦辞，甚察而不惠，辩而无用，多事而寡功，不可以为治纲纪。然而其持之有故，其言之成理，足以欺惑愚众。</span>（琦（<span class="lypinyin">q&iacute;</span>）：通&ldquo;奇&rdquo;。）</span></span>
+<span class="lyterm">井有仁焉</span>是宰予假设的场景，<span class="lyterm">从之</span>指跳下井去（宁愿淹死也要）追寻仁。古注多将&ldquo;仁&rdquo;解释为人或仁人，较牵强。这种活泛机辩的思维，是典型的宰予风格，早于战国时期以逻辑思辨著称的名家，然而并不为孔子喜欢，不认为是仁者正道。<span class="lyseealso"><span>【参】</span><span>孔子自己的表述是 <a href="#15.9" class="lyref">15.9</a> <span class="lyq">杀身以成仁</span>。比较《孟子&middot;告子上》：<span class="lyq">生，亦我所欲也，义，亦我所欲也，二者不可得兼，舍生而取义者也。</span>《荀子&middot;非十二子》批评名家：<span class="lyq">不法<a href="#xianwang">先王</a>，不是礼义，而好治怪说、玩琦辞，甚察而不惠，辩而无用，多事而寡功，不可以为治纲纪。然而其持之有故，其言之成理，足以欺惑愚众。</span>（是：动词，遵从。琦（<span class="lypinyin">q&iacute;</span>）：通&ldquo;奇&rdquo;。）</span></span>
 </p>
 </li>
 <li>
@@ -6589,7 +6588,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">与</span>：动词，称赞，赞许，认可。淡泊<a href="#9.2">名</a>利，注重修养，是孔子的一贯主张。<span class="lyseealso"><span>【参】</span><span><a href="#7.16" class="lyref">7.16</a> 。《史记&middot;孟子荀卿列传》开篇：<span class="lyq">太史公曰：余读孟子书，至梁惠王问&ldquo;何以利吾国&rdquo;，未尝不<a href="#fei4">废</a>书而叹也。曰：嗟乎，利诚乱之始也！夫子罕言利者，常防其原也。</span><a id="xixirangrang"></a>《货殖列传》又承认逐利乃世间常态：<span class="lyq">天下熙熙，皆为利来；天下壤壤，皆为利往。</span>（熙熙、壤壤：都是纷杂众多的样子，壤壤通&ldquo;攘攘&rdquo;。）</span></span>
+<span class="lyterm">与</span>：动词，称赞，赞许，认可。淡泊<a href="#9.2">名</a>利，注重修养，是孔子的一贯主张。<span class="lyseealso"><span>【参】</span><span><a href="#7.16" class="lyref">7.16</a> 。《史记&middot;孟子荀卿列传》开篇：<span class="lyq">太史公曰：余读孟子书，至梁惠王问&ldquo;何以利吾国&rdquo;，未尝不<a href="#fei4">废</a>书而叹也。曰：嗟乎，利诚乱之始也！夫子罕言利者，常防其原也。</span><a id="xixirangrang"></a>《货殖列传》则承认逐利乃世间常态：<span class="lyq">天下熙熙，皆为利来；天下壤壤，皆为利往。</span>（熙熙、壤壤：都是纷杂众多的样子，壤壤通&ldquo;攘攘&rdquo;。）</span></span>
 </p>
 </li>
 </ul>
@@ -6607,14 +6606,15 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">达巷</span>：地名，和 <a href="#7.29" class="lyref">7.29</a>  的<a href="#huxiang">互乡</a>一样无法确考。又有因为《礼记&middot;曾子问》载，<span class="lyq">孔子曰：&ldquo;昔者吾从老聃助葬于巷党&rdquo;</span>，认为&ldquo;巷党&rdquo;是一个词，指乡里，&ldquo;达&rdquo;是其地名。而高亨《<a href="#laozizhuyi">老子注译</a>》卷首&ldquo;关于老子的几个问题&rdquo;，受康有为《论语注》启发，认为&ldquo;达&rdquo;应归于上一章，即：&ldquo;子罕言利，与命与仁，达。&rdquo;颇有创见。</p>
+<span class="lyterm">达巷</span>：地名，和 <a href="#7.29" class="lyref">7.29</a>  的<a href="#huxiang">互乡</a>一样无法确考。又有因为《礼记&middot;曾子问》载，<span class="lyq">孔子曰：&ldquo;昔者吾从老聃助葬于巷党&rdquo;</span>，认为&ldquo;巷党&rdquo;属于一个词，指乡里，&ldquo;达&rdquo;是其地名。而高亨《<a href="#laozizhuyi">老子注译</a>》卷首&ldquo;关于老子的几个问题&rdquo;，受康有为《论语注》启发，认为&ldquo;达&rdquo;应归于上一章，即：&ldquo;子罕言利，与命与仁，达。&rdquo;颇有创见。</p>
 </li>
 <li>
 <p>
 <span class="lyterm">执</span>：拿，持，引申为操持，从事。现代汉语有执教、执勤、执政等词。</p>
 </li>
 </ul>
-<p>御、射同属于<a href="#liuyi">六艺</a>，孔子的话既是谦虚也有<a href="#9.6">自嘲</a>，他追求的并非成名。</p>
+<p>御、射同属<a href="#liuyi">六艺</a>，孔子的话既是谦虚也有<a href="#9.6">自嘲</a>，他追求的并非成名。<span class="lyseealso"><span>【参】</span><span>《后汉书&middot;郑玄传》载，郑玄诫子书中说：<span class="lyq">显誉成于僚友，德行立于己志。&hellip;&hellip;自乐以论赞之功，<a href="#shu4a">庶</a>不遗后人之羞。</span></span></span>
+</p>
 </div>
 </div>
 <a id="9.3"></a>
@@ -13920,7 +13920,7 @@ img.characterimg {
 <a id="jia1b"></a><span class="lyterm">嘉</span>：美，善，用作动词，赞美，赞许。<span class="lyexample"><span>【例】</span><span>《汉书&middot;王莽传》：<span class="lyq">予甚嘉其忠者，怜其无辜。</span></span></span>
 </p>
 <p>
-<a id="jin1a"></a><span class="lyterm">矜</span>：同情，怜悯。<span class="lyexample"><span>【例】</span><span>《左传&middot;僖公十五年》：<span class="lyq">吾怨其君，而矜其民。</span></span></span><span class="lyseealso"><span>【参】</span><span>东汉蔡邕《正交论》：<span class="lyq">子夏之门人问交于子张，而二子各有闻乎夫子。然则以交诲也，<a href="#zixia">商</a>也宽，故告之以距人，<a href="#zizhang">师</a>也褊，故训之以容众，各从其行而矫之。至于仲尼之正教，则泛爱众而亲仁。故非善不喜，非仁不亲，交游以方，会友以文，可无贬也。</span>（褊（<span class="lypinyin">biǎn</span>）：狭。）</span></span>
+<a id="jin1a"></a><span class="lyterm">矜</span>：同情，怜悯。<span class="lyexample"><span>【例】</span><span>《左传&middot;僖公十五年》：<span class="lyq">吾怨其君，而矜其民。</span></span></span><span class="lyseealso"><span>【参】</span><span>东汉蔡邕《正交论》：<span class="lyq">子夏之门人问交于子张，而二子各有闻乎夫子。然则以交诲也，<a href="#zixia">商</a>也宽，故告之以距人，<a href="#zizhang">师</a>也褊，故训之以容众，各从其行而矫之。至于仲尼之正教，则<a href="#1.6">泛爱众而亲仁</a>。故非善不喜，非仁不亲，交游以方，会友以文，可无贬也。</span>（褊（<span class="lypinyin">biǎn</span>）：狭。）</span></span>
 </p>
 </li>
 </ul>
@@ -14241,7 +14241,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">其他可能</span>：别的地方（别人）还做得到。<span class="lyseealso"><span>【参】</span><span><a href="#1.11" class="lyref">1.11</a> </span></span>
+<span class="lyterm">其他可能</span>：别的地方（别人）也许还做得到。<span class="lyseealso"><span>【参】</span><span><a href="#1.11" class="lyref">1.11</a> </span></span>
 </p>
 </li>
 </ul>
@@ -15147,7 +15147,7 @@ img.characterimg {
 <p>
 <span class="lybook">《毛诗正义》</span>，〔汉〕毛亨传，〔汉〕郑玄笺，〔唐〕孔颖达等疏，梁运华整理，山东画报出版社，四库家藏丛书，2004年。</p>
 <p>
-<span class="lybook">《诗经》</span>，〔南宋〕朱熹集传，上海古籍出版社，国学典藏丛书，2013年。</p>
+<span class="lybook">《诗经》</span>，〔南宋〕朱熹集传，原名《诗集传》，上海古籍出版社，国学典藏丛书，2013年。</p>
 <p>
 <a id="shijingquanzhu"></a><span class="lybook">《诗经全注》</span>，褚斌杰注，人民文学出版社，世界文学名著文库，1999年。</p>
 <p>
