Fix a quotation in 20.1.

--- a/aboly.html
+++ b/aboly.html
@@ -577,7 +577,7 @@ img.characterimg {
 <p>
 <span class="lyterm">也</span>：语气词，用作句中停顿，相当于轻读的啊、呀、哦。</p>
 <p>
-<a id="xiao4"></a><span class="lyterm">孝</span>：子女敬爱、尽心尽力侍奉父母。<span class="lyseealso"><span>【参】</span><span>西汉贾谊《新书&middot;道术》：<span class="lyq">子爱利亲谓之孝，反孝为孽。</span>（爱利：爱之利之。）对应地，父母关爱子女称为<span class="lykeyword"><a href="#ci2">慈</a></span>。《<a href="#xiaojing">孝经</a>&middot;开宗明义》：<span class="lyq">夫孝，<a href="#de2">德</a>之本也，教之所由生也。</span></span></span>
+<a id="xiao4"></a><span class="lyterm">孝</span>：子女敬爱、尽心尽力侍奉父母，其甲骨文字形像年少者搀扶老人行走。<span class="lyseealso"><span>【参】</span><span>西汉贾谊《新书&middot;道术》：<span class="lyq">子爱利亲谓之孝，反孝为孽。</span>（爱利：爱之利之。）对应地，父母关爱子女称为<span class="lykeyword"><a href="#ci2">慈</a></span>。《<a href="#xiaojing">孝经</a>&middot;开宗明义》：<span class="lyq">夫孝，<a href="#de2">德</a>之本也，教之所由生也。</span>《汉书&middot;宣帝纪》载，地节四年（前66年）宣帝诏书开头就说：<span class="lyq">导民以孝，则天下顺。</span></span></span>
 </p>
 <p>
 <a id="ti4"></a><span class="lyterm">弟</span>：通&ldquo;悌&rdquo;（<span class="lypinyin">t&igrave;</span>），弟弟敬爱哥哥。对应地，哥哥爱护弟弟称为<span class="lykeyword">友</span>。<span class="lyexample"><span>【例】</span><span><a href="#2.21" class="lyref">2.21</a> <span class="lyq">孝乎惟孝，友于兄弟，施于有政。</span></span></span><span class="lyseealso"><span>【参】</span><span>清代李塨（<span class="lypinyin">gōng</span>）《大学传注》：<span class="lyq">家之所以孝亲、弟兄、慈幼，即国之所以事君事长。</span></span></span>
@@ -1859,11 +1859,13 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="shangshu"></a><span class="lyterm">《书》</span>：指《尚书》，主要记录了从<a href="#yao">尧帝</a>到<a href="#xiachao">夏</a>、<a href="#shangchao">商</a>、<a href="#zhouchao">西周</a>以来贤君名臣间的谈话劝诫之辞，以及起兵前的誓师词等，是中国最古老的历史文献，后来成为儒家<a href="#liujing">六经</a>之一。据《汉书&middot;艺文志》，《尚书》由孔子编纂为100篇，但在流传过程中亡失很多。今本《尚书》共58篇，一般认为其中有25篇是东晋时的伪作，本书在其篇名后标注&ldquo;（伪）&rdquo;。</p>
+<a id="shangshu"></a><span class="lyterm">《书》</span>：指《尚书》，主要记录了从<a href="#yao">尧帝</a>到<a href="#xiachao">夏</a>、<a href="#shangchao">商</a>、<a href="#zhouchao">西周</a>以来贤君名臣间的对答劝诫之辞，也包括誓师词等其它内容，是中国最古老的历史文献，后来成为儒家<a href="#liujing">六经</a>之一。据《汉书&middot;艺文志》，《尚书》由孔子编纂为100篇，但在流传过程中亡失很多。今本《尚书》共58篇，一般认为其中有25篇是东晋时的伪作，本书在其篇名后标注&ldquo;（伪）&rdquo;。</p>
 </li>
 <li>
 <p>
-<span class="lyterm">友于兄弟，施于有政</span>：关爱自己的兄弟，扩散影响于政治风气。这句话见于《尚书&middot;周书&middot;君陈》（伪），文字略有不同。<span class="lyterm">友</span>：兄弟间相亲相爱。</p>
+<span class="lyterm">友于兄弟，施于有政</span>：关爱自己的兄弟，扩散影响于政治风气。这句话见于《尚书&middot;周书&middot;君陈》（伪），文字稍有不同。大众的道德伦理修养普遍提高了，政治自然进步，这个观念是中国传统政治的显著特点。</p>
+<p>
+<span class="lyterm">友</span>：兄弟间相亲相爱。</p>
 <p>
 <a id="you3"></a><span class="lyterm">有</span>：无意义的助词，用于单字名词之前，感觉比较郑重或专注。从&ldquo;存在&rdquo;的角度理解，它含有&ldquo;无需明言也众所周知&rdquo;的意味，近似于英语大写的THE或such。<span class="lyexample"><span>【例】</span><span>《尚书&middot;周书&middot;召诰》：<span class="lyq">有王虽小，<a href="#tianzi">元子</a>哉。</span>（王：指<a href="#chengwang">周成王</a>。）</span></span>
 </p>
@@ -2236,7 +2238,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">巧笑倩（<span class="lypinyin">qi&agrave;n</span>）兮，美目盼兮，素以为绚（<span class="lypinyin">xu&agrave;n</span>）兮</span>。<span class="lyterm">巧笑</span>：精致美好的笑容。<span class="lyterm">倩</span>：口颊俏丽的样子，近似&ldquo;笑意盈盈&rdquo;的感觉。<span class="lyterm">盼</span>：眼睛黑白分明波光流转的样子，就像沈从文小说《雪晴》里<span class="lyq">黑而有光的眼睛</span>。<span class="lyterm">绚</span>：色彩丰富灿烂的样子。</p>
+<span class="lyterm">巧笑倩（<span class="lypinyin">qi&agrave;n</span>）兮，美目盼兮，素以为绚（<span class="lypinyin">xu&agrave;n</span>）兮</span>。<span class="lyterm">巧笑</span>：精致美好的笑容。<span class="lyterm">倩</span>：口颊俏丽的样子，近似&ldquo;笑意盈盈&rdquo;的感觉，后来泛指美丽。<span class="lyterm">盼</span>：眼睛黑白分明波光流转的样子，就像沈从文小说《雪晴》里<span class="lyq">黑而有光的眼睛</span>。<span class="lyterm">绚</span>：色彩丰富灿烂的样子。</p>
 <p>
 <span class="lyterm">巧笑倩兮，美目盼兮</span>出自《诗经&middot;卫风&middot;硕人》，是连续7句形容美人（<a href="#weijun">卫庄公</a>夫人庄姜）的末两句。<span class="lyterm">素以为绚兮</span>的出处则不可考，可能是当时《诗经》里有的，后来被删掉了，也可能是孔子或别人对前两句诗的评论，子夏请老师进一步解释。</p>
 </li>
@@ -14489,7 +14491,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">咨</span>：句首叹词，表示感叹、称赞等语气，相当于啊、唉。后来&ldquo;咨尔&rdquo;成为独立的句首语气词，表示赞叹或祈使。<span class="lyexample"><span>【例】</span><span>《诗经&middot;大雅&middot;荡》：<span class="lyq"><a href="#wen">文王</a>曰：咨！咨女<a href="#shangchao">殷商</a>！</span>《中华民国国歌》：<span class="lyq">咨尔多士，为民先锋。</span></span></span>
+<span class="lyterm">咨</span>：句首叹词，表示感叹、称赞等语气，相当于啊、唉。后来&ldquo;咨尔&rdquo;成为独立的句首语气词，表示赞叹或祈使。<span class="lyexample"><span>【例】</span><span>《诗经&middot;大雅&middot;荡》：<span class="lyq"><a href="#wen">文王</a>曰：咨！咨女<a href="#shangchao">殷商</a>！</span>《中华民国国歌》：<span class="lyq">咨尔多士，为民前锋。</span></span></span>
 </p>
 </li>
 <li>
