--- a/aboly.html
+++ b/aboly.html
@@ -4586,7 +4586,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">奔而殿</span>：败退的时候留在队伍最后（打掩护）。<span class="lyterm">殿</span>：位于军队最后，后来泛指在后。又可指末等，与&ldquo;最&rdquo;相对。<span class="lyexample"><span>【例】</span><span>&ldquo;殿后&rdquo;可以单纯指位置在后，也可表示掩护大部队先撤。在考试、竞赛中，&ldquo;殿军&rdquo;指倒数第一名，或合格入选的最后一名。《后汉书&middot;百官一》：<span class="lyq">岁尽即奏其殿最而行赏罚。</span></span></span>
+<span class="lyterm">奔而殿</span>：败退的时候留在队伍最后（打掩护）。<span class="lyterm">殿</span>：位于军队最后，后来泛指在后；又指末等，与&ldquo;最&rdquo;相对；或指最后的杰出者。<span class="lyexample"><span>【例】</span><span>&ldquo;殿后&rdquo;可以单纯指位置在后，也可表示掩护大部队先撤。在考试、竞赛中，&ldquo;殿军&rdquo;指倒数第一，或合格入选的最后一名。《后汉书&middot;百官一》：<span class="lyq">岁尽即奏其殿最而行赏罚。</span>晚清陈三立曾被誉为<span class="lyq">有清诗人之殿，亦旧诗之殿</span>。</span></span>
 </p>
 </li>
 <li>
@@ -4614,7 +4614,7 @@ img.characterimg {
 <li>
 <p>
 <a id="mianyujinzhishi"></a><span class="lyterm">免</span>指免受灾祸。<span class="lyterm">今之世</span>意指乱世，与<a href="#guzhidao">古</a>相对。</p>
-<p>美姿容则多宠，于今之世容易招惹是非，<a href="#15.41">辞不达</a>就难免于祸了。考虑到孔子对于佞、色的一贯态度 <a href="#1.3" class="lyref">1.3</a> <a href="#1.7" class="lyref">1.7</a> ，这句话既有讽刺，也有对世道的感慨，具体所指何事则难以确考。<span class="lyseealso"><span>【参】</span><span>清代毛奇龄《论语稽求篇&middot;卷三》引其先兄的话说：<span class="lyq">&ldquo;此寓言也。言无希世之资，而徒抱美质以游于人，鲜有不为世害者。&rdquo;以佞比<a href="#e1">阿</a>世，美比善质，直捷明白。盖美而善淫，人未有不思疾害之者，此与怀美质以希世用正同，故曰&ldquo;难免&rdquo;。<a href="#lunyuzhushu">郉氏</a>疏曰：宋朝美而淫，&ldquo;时世疾之&rdquo;，正此义。</span>（希世用：少有为世所用。）</span></span>
+<p>美姿容则多宠，于今之世容易招惹是非，<a href="#15.41">辞不达</a>就难免于祸了。具体所指何事难以确考，考虑到孔子对佞、色的一贯态度 <a href="#1.3" class="lyref">1.3</a> <a href="#1.7" class="lyref">1.7</a> ，这句话既有讽刺，也有对世道的感慨。<span class="lyseealso"><span>【参】</span><span>清代毛奇龄《论语稽求篇&middot;卷三》引其先兄的话说：<span class="lyq">&ldquo;此寓言也。言无希世之资，而徒抱美质以游于人，鲜有不为世害者。&rdquo;以佞比<a href="#e1">阿</a>世，美比善质，直捷明白。盖美而善淫，人未有不思疾害之者，此与怀美质以希世用正同，故曰&ldquo;难免&rdquo;。<a href="#lunyuzhushu">郉氏</a>疏曰：宋朝美而淫，&ldquo;时世疾之&rdquo;，正此义。</span>（希世用：少有为世所用。）</span></span>
 </p>
 </li>
 </ul>
@@ -13428,9 +13428,9 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">难养</span>：近似现代口语的难伺候（上对下的语气）。这是孔子在特定时代的观点，不知因何而发，尽管生动形象，却让现代注家很尴尬。古注多把<span class="lyterm">女子</span>解释为姬妾，<span class="lyterm">小人</span>解释为臣仆。根据存在供养关系、可以自主地亲近或疏远来看，这两个词并非泛指，确实是说关系较近密的下位者，很自然的例子就是姬妾、使女、臣仆、亲随等。在古代，<a href="#daren">小人</a>只是君子的附庸，而一家之中长辈、近亲以外的女性，除了正妻可以举案齐眉，地位确实普遍偏低。如果硬从《论语》里找对应，或许和 <a href="#18.4" class="lyref">18.4</a> <span class="lyq">齐人归女乐</span>有关。</p>
+<span class="lyterm">难养</span>：近似现代口语的难应付、难伺候（上对下的语气）。这是孔子在特定时代的观点，不知因何而发，尽管生动形象，却让现代注家很尴尬。古注多把<span class="lyterm">女子</span>解释为姬妾，<span class="lyterm">小人</span>解释为臣仆。从字面上看，既然存在供养关系，又可以自主地亲近或疏远，这两个词确实不太像泛指，而是说关系较近密的下位者，很自然的例子就是姬妾、宠婢、亲随、弄臣等。在古代，<a href="#daren">小人</a>只是君子的附庸，而一家之中长辈、近亲以外的女性，除了正妻可以举案齐眉，地位确实普遍偏低。如果硬从《论语》里找对应，或许和 <a href="#18.4" class="lyref">18.4</a> <span class="lyq">齐人归女乐</span>有关。</p>
 <p>
-<span class="lyseealso"><span>【参】</span><span>《孝经&middot;孝治》：<span class="lyq">治家者，不敢失于臣妾，而况于妻子乎？</span>（<a id="chen2"></a>臣：男奴，本义为战俘。妾：女奴，本义为有罪之女。）《四书集注》：<span class="lyq">君子之于臣妾，庄以<a href="#li4">莅</a>之，慈以<a href="#xu4a">畜</a>之，则无二者之患矣。</span>《左传&middot;僖公二十四年》（前636年），<a href="#yidihuaxia">狄</a>人助周襄王（前652年&mdash;前619年在位）伐郑有功，襄王欲立狄女为王后，大夫富辰的谏言里有<span class="lyq">女德无极，妇怨无终</span>之语，就是说正负区间很大，不知是否对孔子有所启发。晋代杜预对这句谏言的注解，也可移用于孔子的后两句：<span class="lyq">近之则不知止足，远之则忿怨无已。</span>亦参 <a href="#16.8" class="lyref">16.8</a> <span class="lyq">小人不知天命而不畏也，狎大人，侮圣人之言。</span>后来用于蔑称的&ldquo;儿女子&rdquo;，即短浅无能之辈，可能也与本章有关，如《史记&middot;淮阴侯列传》：<span class="lyq">信方斩，曰：&ldquo;吾悔不用蒯通之计，乃为儿女子所诈，岂非天哉！&rdquo;（指合谋诱骗韩信自投罗网的萧何与吕后。）</span></span></span>
+<span class="lyseealso"><span>【参】</span><span>《孝经&middot;孝治》：<span class="lyq">治家者，不敢失于臣妾，而况于妻子乎？</span>（<a id="chen2"></a>臣：男奴，本义为战俘。妾：女奴，本义为有罪之女。）《四书集注》：<span class="lyq">君子之于臣妾，庄以<a href="#li4">莅</a>之，慈以<a href="#xu4a">畜</a>之，则无二者之患矣。</span>《左传&middot;僖公二十四年》（前636年），<a href="#yidihuaxia">狄</a>人助周襄王（前652年&mdash;前619年在位）伐郑有功，襄王欲立狄女为王后，大夫富辰的谏言里有<span class="lyq">女德无极，妇怨无终</span>之语，就是说正负区间很大，不知是否对孔子有所启发。晋代杜预对这句谏言的注解，刚好可以移用于孔子的后两句：<span class="lyq">近之则不知止足，远之则忿怨无已。</span>亦参 <a href="#16.8" class="lyref">16.8</a> <span class="lyq">小人不知天命而不畏也，狎大人，侮圣人之言。</span>后来作为蔑称的&ldquo;儿女子&rdquo;，即短浅无能之辈，可能也与本章有关，如《史记&middot;淮阴侯列传》：<span class="lyq">信方斩，曰：&ldquo;吾悔不用蒯通之计，乃为儿女子所诈，岂非天哉！&rdquo;（指合谋诱骗韩信自投罗网的萧何与吕后。）</span></span></span>
 </p>
 </li>
 </ul>
