--- a/aboly.html
+++ b/aboly.html
@@ -1107,7 +1107,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="yi4"></a><span class="lyterm">义</span>：宜，适当，又引申为正义，符合道德规范。<span class="lyexample"><span>【例】</span><span><a href="#7.16" class="lyref">7.16</a> <span class="lyq">不义而富且贵，于我如浮云。</span></span></span><span class="lyseealso"><span>【参】</span><span>《韩非子&middot;解老》：<span class="lyq">义者，君臣上下之事，父子贵贱之差也，知交朋友之接也，亲疏内外之分也。&hellip;&hellip;义者，谓其宜也，宜而为之。</span>《孟子&middot;告子上》：<span class="lyq">仁，人心也；义，人路也。</span></span></span>
+<a id="yi4"></a><span class="lyterm">义</span>：宜，适当，又引申为正义，符合道德规范。<span class="lyexample"><span>【例】</span><span><a href="#7.16" class="lyref">7.16</a> <span class="lyq">不义而富且贵，于我如浮云。</span></span></span><span class="lyseealso"><span>【参】</span><span>《韩非子&middot;解老》：<span class="lyq">义者，君臣上下之事，父子贵贱之差也，知交朋友之接也，亲疏内外之分也。&hellip;&hellip;义者，谓其宜也，宜而为之。</span>《孟子&middot;告子上》：<span class="lyq">仁，人心也；义，人路也。</span>也就是说，仁是&ldquo;真正的人&rdquo;的精神，义是&ldquo;真正的人&rdquo;的表现。</span></span>
 </p>
 </li>
 <li>
@@ -1116,7 +1116,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">因不失其亲，<a href="#yi4d">亦</a>可宗也</span>：较难确解。唐代张说《府君墓志》等古文中，把上半句引作<span class="lyq">姻不失亲</span>；南朝梁皇侃《论语义疏》里，下半句为<span class="lyq">亦可宗敬也</span>。据此理解，<span class="lyterm">因</span>通&ldquo;姻&rdquo;，如因缘亦通姻缘；<span class="lyterm">宗</span>为动词，尊崇，效法。这句话的意思就是，结婚成家以后，如果不疏远了本家亲戚，也是值得尊敬的榜样。如果把&ldquo;亲&rdquo;单纯地理解为<a href="#qinqin">父母</a>，就类似于现代说的不能&ldquo;娶了媳妇忘了娘&rdquo;。这里的解释与各家不同。<span class="lyseealso"><span>【参】</span><span><a href="#18.10" class="lyref">18.10</a> </span></span>
+<span class="lyterm">因不失其亲，<a href="#yi4d">亦</a>可宗也</span>：较难确解。唐代张说《府君墓志》等古文中，把上半句引作<span class="lyq">姻不失亲</span>；南朝梁皇侃《论语义疏》里，下半句为<span class="lyq">亦可宗敬也</span>。据此理解，<span class="lyterm">因</span>通&ldquo;姻&rdquo;，如因缘亦通姻缘；<span class="lyterm">宗</span>为动词，尊崇，效法。这句话的意思就是，结婚成家以后，如果不疏远了本家亲戚，也是值得尊敬的榜样。如果把&ldquo;亲&rdquo;单纯地理解为<a href="#qinqin">父母</a>，就类似于现代说的不能&ldquo;娶了媳妇忘了娘&rdquo;。这后一个解释与各家不同。<span class="lyseealso"><span>【参】</span><span><a href="#18.10" class="lyref">18.10</a> </span></span>
 </p>
 </li>
 </ul>
@@ -1831,7 +1831,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="ci2"></a><span class="lyterm">慈</span>：上爱下，特指父母爱子女。<span class="lyexample"><span>【例】</span><span>成语&ldquo;父慈子孝&rdquo;。</span></span>
+<a id="ci2"></a><span class="lyterm">慈</span>：上爱下，特指父母爱子女。<span class="lyexample"><span>【例】</span><span>成语&ldquo;父慈子孝&rdquo;。</span></span><span class="lyseealso"><span>【参】</span><span>西汉贾谊《新书&middot;道术》：<span class="lyq">亲<a href="#xiao4">爱利</a>子谓之慈，反慈为嚚。</span>（嚚（<span class="lypinyin">y&iacute;n</span>）：愚蠢顽固。）</span></span>
 </p>
 </li>
 </ul>
@@ -8630,7 +8630,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="shu4a"></a><span class="lyterm">庶</span>（<span class="lypinyin">sh&ugrave;</span>）：接近，差不多，有赞赏或庆幸的意味，这里指近于道。从庆幸又引申为希冀，但愿。文言文里常见的&ldquo;庶<a href="#ji1a">几</a>&rdquo;是并列结构，意思也相同。<span class="lyexample"><span>【例】</span><span>诸葛亮《前出师表》：<span class="lyq">庶竭驽钝，攘除奸凶。</span>（驽钝：谦称自己的平庸之才。<a id="rang3"></a>攘：驱逐，排除。）</span></span>
+<a id="shu4a"></a><span class="lyterm">庶</span>（<span class="lypinyin">sh&ugrave;</span>）：接近，差不多，有赞赏或庆幸的意味，这里指近于道。从庆幸又引申为希冀，但愿。文言文里常见的&ldquo;庶<a href="#ji1a">几</a>&rdquo;是并列结构，意思也相同，后来又可以指贤才。<span class="lyexample"><span>【例】</span><span>诸葛亮《前出师表》：<span class="lyq">庶竭驽钝，攘除奸凶。</span>（驽钝：谦称自己的平庸之才。<a id="rang3"></a>攘：驱逐，排除。）《金史&middot;荆王守纯传》：<span class="lyq">始吾以汝为相者，庶几相辅，不至为人讥病耳。</span></span></span>
 </p>
 </li>
 <li>
@@ -13147,7 +13147,7 @@ img.characterimg {
 <li>
 <p>
 <span class="lyterm"><a href="#bifu">鄙夫</a></span>：庸俗浅陋的人。&ldquo;鄙&rdquo;的具体所指见后两句。</p>
-<p>这个反问句的字面意思是&ldquo;鄙夫不可与之事君&rdquo;，实际是在说&ldquo;鄙夫不可事君&rdquo;，&ldquo;鄙夫不可为政&rdquo;。</p>
+<p>这个反问句的字面意思是&ldquo;鄙夫不可与之事君&rdquo;，言下之意就是&ldquo;鄙夫不可事君&rdquo;，&ldquo;鄙夫不可为政&rdquo;。</p>
 </li>
 <li>
 <p>
@@ -13161,9 +13161,9 @@ img.characterimg {
 </ul>
 <div class="lyseealso">
 <p>
-<span>【参】</span><span>苏轼关于本章的学习心得，见《上皇帝书》：<span class="lyq">臣始读此书，疑其太过，以为鄙夫之患失，不过<a href="#beiyuan">备位</a>而<a href="#gou3">苟</a>容。及观李斯忧蒙恬之夺其权，则立二世以亡秦；卢杞忧怀光之数其恶，则误德宗以再乱。其心本生于患失，而其祸乃至于丧邦。孔子之言，良不为过！是以知为国者，平居必有忘躯犯颜之士，则临难<a href="#shu4a">庶几</a>有徇义<a href="#shou3">守死</a>之臣。苟平居尚不能一言，则临难何以责其死节？人臣苟皆如此，天下亦<a href="#dai4">殆</a>哉！</span></span>
+<span>【参】</span><span>苏轼关于本章的体会，见1071年《上神宗皇帝书》：<span class="lyq">臣始读此书，疑其太过，以为鄙夫之患失，不过<a href="#beiyuan">备位</a>而<a href="#gou3">苟</a>容。及观李斯忧蒙恬之夺其权，则立二世以亡秦；卢杞忧怀光之数其恶，则误德宗以再乱。其心本生于患失，而其祸乃至于丧邦。孔子之言，良不为过！是以知为国者，平居必有忘躯犯颜之士，则临难<a href="#shu4a">庶几</a>有徇义<a href="#shou3">守死</a>之臣。苟平居尚不能一言，则临难何以责其死节？人臣苟皆如此，天下亦<a href="#dai4">殆</a>哉！</span></span>
 </p>
-<p>（<a id="ershiwangqin"></a>李斯事：《史记&middot;李斯列传》载，前210年秦始皇病故，近臣赵高以<span class="lyq">未尝见秦免罢丞相功臣有封及二世者也，卒皆以诛亡</span>为由胁迫丞相<a href="#dongmenhuangquan">李斯</a>改立新君。李斯始而不从，继而<span class="lyq">仰天长叹，垂泪<a href="#taixi">太息</a></span>，合谋<a href="#jiancuanweijiao">矫</a>诏赐死了刚毅武勇的皇长子扶苏和名将蒙恬，立才能浅薄的幼子胡亥为秦二世，3年后秦朝覆亡。卢杞事：《新唐书&middot;卢杞传》载，783年10月爆发泾原兵变，唐德宗从都城长安出奔，被困于奉天（今陕西省咸阳市乾县）月余，朔方节度使李怀光千里赴难，勇解城下之围。怀光曾斥宰相卢杞之徒奸佞误国，<span class="lyq">宜诛之以谢天下</span>，杞惧，使德宗令怀光乘胜扫平叛党，不必入城面君。怀光<span class="lyq">内怏怏无所发，遂谋反，因暴言杞等罪恶</span>，德宗再逃至汉中，战乱又延续了大半年才得平息。徇：通&ldquo;殉&rdquo;。）</p>
+<p>（<a id="ershiwangqin"></a>李斯事：《史记&middot;李斯列传》载，前210年秦始皇病故，近臣赵高以<span class="lyq">未尝见秦免罢丞相功臣有封及二世者也，卒皆以诛亡</span>为由胁迫丞相<a href="#dongmenhuangquan">李斯</a>改立新君。李斯始而不从，继而<span class="lyq">仰天长叹，垂泪<a href="#taixi">太息</a></span>，合谋<a href="#jiancuanweijiao">矫</a>诏赐死了刚毅武勇的皇长子扶苏和名将蒙恬，立才能浅薄的幼子胡亥为秦二世，3年后秦朝覆亡。卢杞事：《新唐书&middot;卢杞传》载，783年10月爆发泾原兵变，唐德宗从都城长安出奔，被困于奉天（今陕西省咸阳市乾县）月余，朔方节度使李怀光千里赴难，勇解城下之围。怀光曾斥宰相卢杞之徒奸佞误国，<span class="lyq">宜诛之以谢天下</span>，杞惧，使德宗令怀光乘胜扫平叛党，不必入城面君。怀光<span class="lyq">内怏怏无所发，遂谋反，因暴言杞等罪恶</span>，德宗再逃至汉中，战乱又延续了大半年方得平息。徇：通&ldquo;殉&rdquo;。）</p>
 </div>
 </div>
 </div>
@@ -14064,11 +14064,11 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">则以为厉己也</span>的主语是&ldquo;其民&rdquo;。<span class="lyterm">厉</span>：虐害，残酷对待。</p>
+<span class="lyterm">则以为厉己也</span>的主语是&ldquo;其民&rdquo;。<span class="lyterm">厉</span>：虐害，残酷对待。思考：你能不能举出历史上&ldquo;信而后劳其民&rdquo;的反例？它们产生了什么结果和影响？</p>
 </li>
 <li>
 <p>
-<span class="lyterm">则以为谤己也</span>隐含的主语是&ldquo;其君&rdquo;。<span class="lyterm">谤</span>：本义为公开批评指责别人的过失，引申为毁谤，用夸张不实的话来攻击丑化。<span class="lyexample"><span>【例】</span><span>《国语&middot;周语上》：<span class="lyq"><a href="#lixuanyouping">厉王</a>虐，国人谤王。</span></span></span><span class="lyseealso"><span>【参】</span><span>苏轼《上皇帝书》：<span class="lyq">未信而谏，圣人不<a href="#yu3a">与</a>；交浅言深，君子所戒。</span></span></span>
+<span class="lyterm">则以为谤己也</span>隐含的主语是&ldquo;其君&rdquo;。<span class="lyterm">谤</span>：本义为公开批评指责别人的过失，引申为毁谤，用夸张不实的话来攻击丑化。<span class="lyexample"><span>【例】</span><span>《国语&middot;周语上》：<span class="lyq"><a href="#lixuanyouping">厉王</a>虐，国人谤王。</span></span></span><span class="lyseealso"><span>【参】</span><span>苏轼1071年《上神宗皇帝书》：<span class="lyq">未信而谏，圣人不<a href="#yu3a">与</a>；交浅言深，君子所戒。</span></span></span>
 </p>
 </li>
 </ul>
