--- a/aboly.html
+++ b/aboly.html
@@ -2422,7 +2422,7 @@ img.characterimg {
 <p><a id="sanjun"></a><span class="lyterm">三军</span>：大诸侯国拥有的军队的总称，也泛指军队。《周礼·地官司徒·小司徒》：<span class="lyq">五人为伍，五伍为两，四两为卒，五卒为旅，五旅为师，五师为军。</span>《周礼·夏官司马·序官》：<span class="lyq">凡制军，万有二千五百人为军。<a href="#tianzi">王</a>六军，大国三军，次国二军，小国一军。</span>东周时征伐渐起，“军”的实际编制不断扩大，如前259年秦赵长平之战后，惨胜的秦军分为三军，估计仍有几十万之众。 </p>
 </li>
 <li>
-<p><a id="baohupinghe"></a><span class="lyterm">暴虎冯（<span class="lypinyin">píng</span>）河</span>：空手与虎搏斗，徒步趟水（而不愿乘船）过河。出自《诗经·小雅·小旻》（<span class="lypinyin">mín</span>）：<span class="lyq">不敢暴虎，不敢冯河。人知其一，莫知其他。</span>原诗是说<a href="#zhouyouwang">周幽王</a>昏聩妄为，作者深恐国运将衰，只有小心度日。</p>
+<p><a id="baohupinghe"></a><span class="lyterm">暴虎冯（<span class="lypinyin">píng</span>）河</span>：空手与虎搏斗，徒步趟水（而不愿乘船）过河。出自《诗经·小雅·小旻》（<span class="lypinyin">mín</span>）：<span class="lyq">不敢暴虎，不敢冯河。人知其一，莫知其他。</span>原诗前面描述了<a href="#zhouyouwang">周幽王</a>政府的种种昏聩无能，这里通过对比表明，国运衰危当权者却视而不见，有心者只得<a href="#zhanzhanjingjing">谨慎度日</a>。</p>
 <p><span class="lyterm">暴</span>：徒手搏击。<a id="ping2"></a><span class="lyterm">冯</span>：徒步涉水。从来源上看，暴和冯都有欺凌、侵侮的意思。成语“暴虎冯河”形容人有勇无谋，鲁莽冒险。</p>
 </li>
 </ul></div>
@@ -2708,7 +2708,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">启</span>：较难确解。它的一种繁体写法是“啓”，故有认为是“<span class="lyextended">䁈</span>”（<span class="lypinyin">qì</span>）之误，即仔细察看。可能曾子病得很凶，手脚上都出现了斑痕。另外，本句在《论衡·四讳》中引作“开予足，开予手”。《大戴礼记·曾子疾病》开头说，曾子发病时，两个儿子得一人按住头，一人抱着脚。这应是痉挛类症状，假如本章也如此，则可以理解为展平抽搐拳曲的手足，才好郑重有礼地跟弟子讲话。后一个解释与各家不同。</p></li>
 <li>
-<p><span class="lyterm">战战兢兢（<span class="lypinyin">jīng</span>），如临深渊，如履薄冰</span>：形容小心谨慎的样子。这是《诗经·小雅·小旻》的结尾，紧接在“<a href="#baohupinghe">不敢暴虎</a>”4句之后。</p>
+<p><a id="zhanzhanjingjing"></a><span class="lyterm">战战兢兢（<span class="lypinyin">jīng</span>），如临深渊，如履薄冰</span>：形容小心谨慎的样子。这是《诗经·小雅·小旻》的结尾，紧接在“<a href="#baohupinghe">不敢暴虎</a>”4句之后。</p>
 <p><span class="lyterm">战战</span>：害怕发抖的样子。<span class="lyterm">兢兢</span>：专注谨慎的样子。<span class="lyterm">兢</span>：本义为二人并排竞赛吹奏。成语“战战兢兢”既可以形容害怕发抖，也可以形容小心谨慎。<a id="lv3"></a><span class="lyterm">履</span>：踩踏，在上面行走。<span class="lyexample"><span>【例】</span><span>《周易·坤》：<span class="lyq">初六，履霜坚冰至。</span></span></span></p>
 </li>
 <li><p><span class="lyterm">而今而后</span>：如今以后，今后。<span class="lyexample"><span>【例】</span><span>《宋史·文天祥传》载，南宋丞相文天祥抗元被俘后宁死不降，妻子为他收尸，见<span class="lyq">其衣带中有赞曰：“孔曰成仁，<a href="#mengzi">孟</a>曰取义；惟其义尽，所以<a href="#7.30">仁至</a>。读圣贤书，所学何事！而今而后，<a href="#shu4a">庶几</a>无愧。”</span>（<a id="zan4"></a>赞：明，总结性的话，常为四字一句。）</span></span></p></li>
@@ -2963,7 +2963,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">绝四</span>：杜绝四种毛病。</p></li>
 <li><p><span class="lyterm">意</span>：通“<a href="#yi4a">亿</a>”，主观臆测。<span class="lyseealso"><span>【参】</span><span><a href="#2.17" class="lyref">2.17</a> </span></span></p></li>
-<li><p><span class="lyterm">必</span>：非黑即白，绝对主义，又可理解为死钻牛角尖，非怎样不可，其本义为分界用的木橛。</p></li>
+<li><p><span class="lyterm">必</span>：非黑即白，绝对主义，又可理解为死钻牛角尖，非怎样不可。其本义为分界用的木橛。</p></li>
 <li><p><span class="lyterm"><a href="#gu4">固</a></span>：顽固不化，拒绝变通。<span class="lyseealso"><span>【参】</span><span><a href="#4.10" class="lyref">4.10</a> </span></span></p></li>
 <li><p><span class="lyterm">我</span>：自私自我。</p></li>
 </ul></div>
@@ -4072,7 +4072,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="te2"></a><span class="lyterm">修慝</span>（<span class="lypinyin">tè</span>）：消除恶念。<span class="lyterm">修</span>：修除，整治去除。<a id="te4"></a><span class="lyterm">慝</span>：恶。<span class="lyseealso"><span>【参】</span><span><a href="#12.10" class="lyref">12.10</a> </span></span></p></li>
 <li><p><a id="qi2"></a><span class="lyterm">攻其恶</span>里的<span class="lyterm">其</span>指自己，与后面的<span class="lyterm">人</span>相对。</p></li>
-<li><p><span class="lyterm">忿</span>：怨恨，恼怒。</p></li>
+<li><p><a id="fen4a"></a><span class="lyterm">忿</span>：怨恨，恼怒。</p></li>
 <li><p><span class="lyterm">以及</span>：以致连累到。<span class="lyseealso"><span>【参】</span><span>《孝经·天子》：<span class="lyq">爱亲者，不敢<a href="#wu4">恶</a>于人；敬亲者，不敢<a href="#man4">慢</a>于人。</span></span></span></p></li>
 </ul></div>
 </div>
@@ -4318,7 +4318,8 @@ img.characterimg {
 <p>这里“有耻”修饰“行己”。在现代语境中，还可以把“行己有耻”理解为并列结构，行己就是做（真的）自己，be your (best) self，也很有意义。</p>
 <div class="lyseealso">
 <p><span>【参】</span><span>顾炎武《与友人论学书》中，高度推崇“博学”、“有耻”：<span class="lyq">愚所谓圣人之道者如之何？曰“<a href="#6.27">博学于文</a>”，曰“行己有耻”。自一身以至于天下国家，皆学之事也；自子臣弟友以至出入、往来、辞受、取与之间，皆有耻之事也。耻之于人大矣！不<a href="#4.9">耻恶衣恶食</a>，而<a href="#yitianxiaweijiren">耻匹夫匹妇之不被其泽</a>。</span></span></p>
-<p>有耻属于修身，使不辱命属于事功，这是孔子心中“士”的两面，也是儒家<a href="#xian2">贤人</a>的两面。而根据 <a href="#13.5" class="lyref">13.5</a> ，博学于文也应当学以致用。所以明代吕坤的《呻吟语·问学》主张：<span class="lyq">道理书尽读，事务书多读，文章书少读，闲杂书休读，邪妄书焚之可也。</span>（文章书：指偏于文学技巧的诗词歌赋作品。）类似的观点在不同时代有特定的表述，例如创建于1958年的中国科学技术大学，校训就是“红专并进，理实交融”。</p>
+<p>使于四方不辱君命，是外交使节的荣誉所在。西汉的苏武被匈奴羁留19年，执节牧羊，坚贞不屈，<span class="lyq">始以强壮出，及还，须发尽白</span>，赢得一致的尊重。（《汉书·苏武传》。）1793年代表英国首次使华的乔治·马戛尔尼（George Macartney）也在其日记中写道：<span class="lyq">吾禀命东来，与本国政府相距既远，事事均须斟酌独断，万一处理不当，必贻国际之羞。</span>（《乾隆英使觐见记》，刘半农译。）</p>
+<p>有耻属于修身，使不辱命属于事功，这是孔子心中“士”的两面，也是儒家<a href="#xian2">贤人</a>的两面。而根据 <a href="#13.5" class="lyref">13.5</a> ，博学于文也应当学以致用。所以明代吕坤的《呻吟语·问学》主张：<span class="lyq">道理书尽读，事务书多读，文章书少读，闲杂书休读，邪妄书焚之可也。</span>（文章书：指偏于文学技巧的诗词歌赋作品。）共通的观点在不同时代有特定的表述，例如1958年建校的中国科学技术大学，校训就是“红专并进，理实交融”。</p>
 </div>
 </li>
 <li><p><span class="lyterm">言必信，行必果</span>：说话永远守信诚实，做事必定贯彻落实。孔子不赞成不通<a href="#quan2">权变</a>、拘泥<a href="#19.11">小德</a>的做事方式，认为这也是器量不够的表现。而在现代汉语中，这个成语已具有明显的褒义。<a id="guo3a"></a><span class="lyterm">果</span>：实现，获得结果。<span class="lyseealso"><span>【参】</span><span><a href="#14.17" class="lyref">14.17</a> 。《孟子·离娄下》：<span class="lyq">孟子曰：“大人者，言不必信，行不必果，惟<a href="#yi4">义</a>所在。”</span></span></span></p></li>
@@ -5575,11 +5576,11 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#17.16">17.16</a></div>
 <div class="lybloboriginaltext"><p>子曰：“古者民有三疾，今也或是之亡也？古之狂也肆，今之狂也荡；古之矜也廉，今之矜也忿戾；古之愚也直，今之愚也诈而已矣。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">疾</span>：缺点，毛病。<span class="lyexample"><span>【例】</span><span>《孟子·梁惠王下》：<span class="lyq">寡人有疾，寡人好勇。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#17.8" class="lyref">17.8</a> </span></span></p></li>
-<li><p><a id="si4b"></a><span class="lyterm">肆</span>：放纵，指自由随意，不拘小节。相对地，<span class="lyterm">荡</span>则是<a href="#19.11">逾大闲</a>。</p></li>
+<li><p><span class="lyterm">疾</span>：缺点，毛病。<span class="lyexample"><span>【例】</span><span>《孟子·梁惠王下》：<span class="lyq">寡人有疾，寡人好色。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#17.8" class="lyref">17.8</a> </span></span></p></li>
+<li><p><a id="si4b"></a><span class="lyterm">肆</span>：放纵，指自由随意，不拘小节。相对地，<span class="lyterm">荡</span>则是过于出格，<a href="#19.11">逾大闲</a>。</p></li>
 <li><p><a id="jin1b"></a><span class="lyterm"><a href="#jin1">矜</a></span>：骄傲自负，自高自大。<span class="lyseealso"><span>【参】</span><span>《三国志·蜀书·刘璋传》裴松之注引习凿齿语：<span class="lyq">昔<a href="#qihuangong">齐桓</a>一矜其功而叛者九国，曹操暂自骄伐而天下三分，皆勤于数十年之内而弃之于俯仰之顷，岂不惜乎！是以君子劳谦日昃，<a href="#lvyixiaren">虑以下人</a>，功高而居之以让，势尊而守之以卑。</span>（昃（<span class="lypinyin">zè</span>）：太阳西斜。日昃：出自《周易·离》，这里指工作勤久。）</span></span></p></li>
-<li><p><a id="lian2"></a><span class="lyterm">廉</span>：品行正直而有失宽容，相当于严于律己也严于律人。其本义为堂屋的地面与墙面并成的直二面角（而非墙角旮旯），所以有方正之意，又因为相夹则狭，所以还有狭窄之意，《说文解字》就直接解释为仄（狭窄）。常用的清正不贪财，是它的后起偏义。这里的解释略与各家不同，他们未能指明狭窄，似乎偏离了“疾”。<span class="lyexample"><span>【例】</span><span>《庄子·徐无鬼》评价<a href="#guanzhong">鲍叔牙</a>：<span class="lyq">为人洁廉，善士也；其于<a href="#1.8">不己若者</a>不<a href="#bi3">比</a>之，又一闻人之过，终身不忘。</span>《史记·屈原贾生列传》评价屈原：<span class="lyq">其志洁，故其称物芳；其行廉，故死而不容。</span>《史记·郦生陆贾列传》评价平原君朱建：<span class="lyq">刻廉刚直，……行不<a href="#gouhe">苟合</a>，义不取容。</span>（刻：严苛。<a id="qurong"></a>取容：讨好别人以求安身。）</span></span><span class="lyseealso"><span>【参】</span><span>《韩诗外传》第1卷第25章说，<span class="lyq">仁道有四，磏为下</span>（磏（<span class="lypinyin">lián</span>）：赤色有棱角的石头，这里通“廉”），并举<a href="#boyishuqi">伯夷</a>、<a href="#boyishuqi">叔齐</a>、<a href="#yuansi">原思</a>等人为例：<span class="lyq">廉洁直方，<a href="#ji2">疾</a>乱不治，恶邪不<a href="#kuang1">匡</a>，虽居乡里，若坐涂炭，命入朝廷，如赴汤火，非其民不使，非其食弗尝，疾乱世而轻死，弗顾兄弟，……是磏仁者也。……山锐则不高，水径则不深，仁磏则其德不厚。</span>（如赴汤火：形容在所不惜。<a href="#jing4">径</a>：指窄小。）1998年香港电影《野兽刑警》中有句善恶分明的台词，可以作为“廉”的注脚：<span class="lyq">这个世界在黑白之间，有一个地方叫灰色的地带。有人灰色的地带好大一片，有人小点，而我黑白之间，只有一条线。</span></span></span></p></li>
-<li><p><span class="lyterm">忿戾</span>（<span class="lypinyin">lì</span>）：蛮横易怒。<a id="li4a"></a><span class="lyterm">戾</span>：乖张，暴虐。</p></li>
+<li><p><a id="lian2"></a><span class="lyterm">廉</span>：品行正直而有失宽容，相当于严于律己也严于律人。其本义为堂屋的地面与墙面并成的直二面角（而非墙角旮旯），所以有方正之意，又因为相夹则狭，所以还有狭窄之意，《说文解字》就直接解释为仄（狭窄）。常用的清正不贪，是它的后起偏义。这里的解释略与各家不同，他们未能指明狭窄，似乎偏离了“疾”。<span class="lyexample"><span>【例】</span><span>《庄子·徐无鬼》评价<a href="#guanzhong">鲍叔牙</a>：<span class="lyq">为人洁廉，善士也；其于<a href="#1.8">不己若者</a>不<a href="#bi3">比</a>之，又一闻人之过，终身不忘。</span>《史记·屈原贾生列传》评价屈原：<span class="lyq">其志洁，故其称物芳；其行廉，故死而不容。</span>《史记·郦生陆贾列传》评价平原君朱建：<span class="lyq">刻廉刚直，……行不<a href="#gouhe">苟合</a>，义不取容。</span>（刻：严苛。<a id="qurong"></a>取容：讨好别人以求安身。）</span></span><span class="lyseealso"><span>【参】</span><span>《韩诗外传》第1卷第25章说，<span class="lyq">仁道有四，磏为下</span>（磏（<span class="lypinyin">lián</span>）：赤色有棱角的石头，这里通“廉”），并举<a href="#boyishuqi">伯夷</a>、<a href="#boyishuqi">叔齐</a>、<a href="#yuansi">原思</a>等人为例：<span class="lyq">廉洁直方，<a href="#ji2">疾</a>乱不治，恶邪不<a href="#kuang1">匡</a>，虽居乡里，若坐涂炭，命入朝廷，如赴汤火，非其民不使，非其食弗尝，疾乱世而轻死，弗顾兄弟，……是磏仁者也。……山锐则不高，水径则不深，仁磏则其德不厚。</span>（如赴汤火：形容在所不惜。<a href="#jing4">径</a>：指窄小。）1998年香港电影《野兽刑警》中有句善恶分明的独白，可以作为“廉”的注脚：<span class="lyq">这个世界在黑白之间，有一个地方叫灰色的地带。有人灰色的地带好大一片，有人小点，而我黑白之间，只有一条线。</span></span></span></p></li>
+<li><p><span class="lyterm"><a href="#fen4a">忿</a>戾</span>（<span class="lypinyin">lì</span>）：蛮横易怒。<a id="li4a"></a><span class="lyterm">戾</span>：乖张，暴虐。</p></li>
 </ul></div>
 </div>
 <a id="17.17"></a><div class="lyblob">
@@ -6223,7 +6224,7 @@ img.characterimg {
 <p><span class="lyq">夫子为卫君乎</span>时的孔子，是周游列国踌躇满志的政治家。卫庄公上台时的孔子，已经是风烛残年、桃李满天下的老人，一年后就去世了。 <a href="#7.15" class="lyref">7.15</a> <a href="#13.3" class="lyref">13.3</a> </p>
 <p><a id="weilinggong"></a><span class="lycharname">卫灵公</span>（前540年—前493年）：名元，<a href="#kangshu">卫国</a>第28任国君，6岁继位（“乱而不损曰灵”）。他的私生活较混乱，内惧夫人<a href="#nanzi">南子</a>，<a id="mizixia"></a>信任男宠弥子瑕（典故“断袖余桃”后一半的主角），但公务方面称得上知人善任。《孔子家语·贤君》载，<a href="#aigong">鲁哀公</a>曾问孔子当今之君谁为最贤，孔子回答：尽管称不上贤，卫灵公也算佼佼者了：<span class="lyq">臣语其朝廷行事，不论其私家之际也。</span><a href="#14.19" class="lyref">14.19</a> <a href="#15.1" class="lyref">15.1</a> </p>
 <p><a id="wen"></a><span class="lycharname">文</span>，<span class="lycharname">文王</span>：周文王姬昌（前1152年—前1056年），商末周国首领，<a href="#taibo">季历</a>之子，<a href="#wu">周武王</a>之父，在位51年，被<a href="#zhou">殷纣王</a>封为西伯，武王灭商后追封其为周文王。文王在位时，笃仁积善，敬老慈少，天下归心，受到纣王忌惮，被囚禁于羑（<span class="lypinyin">yǒu</span>）里（在今河南省安阳市汤阴县北）。据说期间将<a href="#sanhuang">伏羲</a>发明的八卦两两相重，推演为六十四卦（又称后天八卦），形成了流传至今的《<a href="#yijing">周易</a>》。囚禁近8年后，文王的谋臣散宜生、<a href="#jiangtaigong">吕尚</a>等人献美女重宝于纣王，纣王大悦，不仅赦免了文王，还赐予他<a href="#liyuezhengfa">征伐之权</a>，周的势力<a href="#sanfentianxia">日益扩大</a>了。文王回国约6年后去世，寿至97岁，武王继立。事见《史记·殷本纪》、《史记·周本纪》。</p>
-<p>《诗经》有很多诗篇赞颂文王的美德。民间传说文王有百子，依据的只是《诗经·大雅·思齐》：<span class="lyq">大姒嗣徽音，则百斯男。</span>（<a id="taisi"></a><a href="#tai4">大</a>姒：即太姒，文王的正妻。徽：美，善。）文王的长子是伯邑考，《帝王世纪》载，文王遭囚后，他自愿入商做人质，被纣王杀害：<span class="lyq">质于殷，为纣御。纣烹以为羹，赐文王，曰：“圣人当不食其子羹。”文王得而食之，纣曰：“谁谓西伯圣者？食其子羹尚不知也。”</span><a href="#9.5" class="lyref">9.5</a> <a href="#19.22" class="lyref">19.22</a> </p>
+<p>《诗经》有很多诗篇赞颂文王的美德。民间传说文王有百子，依据的只是《诗经·大雅·思齐》：<span class="lyq">大姒嗣徽音，则百斯男。</span>（<a id="taisi"></a><a href="#tai4">大</a>姒：即太姒，文王的正妻。徽：美，善。）文王的长子是伯邑考，《帝王世纪》载，文王遭囚后，他自愿入商做人质，被纣王杀害：<span class="lyq">质于殷，为纣御。纣烹以为羹，赐文王，曰：“圣人当不食其子羹。”文王得而食之。纣曰：“谁谓西伯圣者？食其子羹尚不知也。”</span><a href="#9.5" class="lyref">9.5</a> <a href="#19.22" class="lyref">19.22</a> </p>
 <p><a id="wu"></a><span class="lycharname">武</span>，<span class="lycharname">武王</span>：周武王姬发（前1135年—前1043年），<a href="#zhouchao">周朝</a>开国之君，<a href="#wen">周文王</a>次子。前1056年继位，以姜太公<a href="#jiangtaigong">吕尚</a>为师，任用<a href="#zhougong">周公旦</a>、<a href="#shaogong">召公奭</a>等贤臣，<span class="lyq">师修文王<a href="#xu4b">绪</a>业</span>。8年后，在盟津（今河南省洛阳市孟津县）阅兵扬威，<span class="lyq">不期而会盟津者八百诸侯</span>，且天降异兆，白鱼跃入王舟，天火化为赤鸦。诸侯都说<span class="lyq"><a href="#zhou">纣</a>可伐矣</span>，武王认为<span class="lyq">未知<a href="#tianming">天命</a></span>（应是未有把握），引兵而还。后来纣王杀<a href="#biganjiziweizi">比干</a>、囚<a href="#biganjiziweizi">箕子</a>，众叛亲离，武王认为不可不伐，遂于前1046年春，率5万精兵，在<a href="#zhaoge">朝歌</a>郊外的牧野（今河南省新乡市北）一日尽破号称70万的商军，纣王自焚死，商亡周兴。3年后武王去世，寿至93岁。事见《史记·周本纪》。 <a href="#8.20" class="lyref">8.20</a> <a href="#19.22" class="lyref">19.22</a> </p>
 <p><a id="yanpingzhong"></a><span class="lycharname">晏平仲</span>：晏婴（前578年—前500年），平是他的谥号（“布纲治纪曰平”），仲是他的字。春秋后期齐国灵公、庄公、<a href="#qijinggong">景公</a>的三朝重臣，娴于外交，智慧通达，节俭力行。《史记·管晏列传》简要记述了他的事迹，《晏子春秋》集中载录了他的言行活动。 <a href="#5.17" class="lyref">5.17</a> </p>
 <p><a id="yao"></a><span class="lycharname">尧</span>（约前2300年前后）：陶唐氏，名放勋，又称唐尧，上古传说中<a href="#wudi">五帝</a>的第4位，是五帝第3位喾的次子。尧20岁登帝位，仁智明德，亲亲利民，《史记·五帝本纪》形容他<span class="lyq">其仁如天，其知如神，就之如日，望之如云。</span>他在位70年后退居二线，授权给有孝德的平民<a href="#shun">舜</a>，20年后荐舜摄天子政，又8年后去世，<span class="lyq">百姓悲哀，如丧父母。</span>后来“尧舜<a href="#yu">禹</a><a href="#tang">汤</a>”、“二帝三王”（尧、舜；禹、汤、<a href="#wu">周武王</a>）被儒家奉为圣明君主的代名词。 <a href="#6.30" class="lyref">6.30</a> <a href="#8.19" class="lyref">8.19</a> <a href="#14.42" class="lyref">14.42</a> <a href="#20.1" class="lyref">20.1</a> </p>
