--- a/aboly.html
+++ b/aboly.html
@@ -529,7 +529,7 @@ img.characterimg {
 <p><span class="lyterm">也</span>：语气词，用作句中停顿，相当于轻读的啊、呀、哦。</p>
 <p><a id="xiao4"></a><span class="lyterm">孝</span>：子女敬爱、尽心尽力侍奉父母，其甲骨文字形像年少者搀扶老人行走。<span class="lyseealso"><span>【参】</span><span>西汉贾谊《新书·道术》：<span class="lyq">子爱利亲谓之孝，反孝为孽。</span>（爱利：爱之利之。）对应地，父母关爱子女称为<span class="lykeyword"><a href="#ci2">慈</a></span>。《<a href="#xiaojing">孝经</a>·开宗明义》：<span class="lyq">夫孝，<a href="#de2">德</a>之本也，教之所由生也。</span>《汉书·宣帝纪》载，地节四年（前66年）宣帝诏书开头就说：<span class="lyq">导民以孝，则天下顺。</span></span></span></p>
 <p><a id="ti4"></a><span class="lyterm">弟</span>：通“悌”（<span class="lypinyin">tì</span>），弟弟敬爱哥哥。对应地，哥哥爱护弟弟称为<span class="lykeyword">友</span>。<span class="lyexample"><span>【例】</span><span><a href="#2.21" class="lyref">2.21</a> <span class="lyq">孝乎惟孝，友于兄弟，施于有政。</span></span></span><span class="lyseealso"><span>【参】</span><span>清代李塨（<span class="lypinyin">gōng</span>）《大学传注》：<span class="lyq">家之所以孝亲、弟兄、慈幼，即国之所以事君事长。</span></span></span></p>
-<p><span class="lyterm"><a href="#hao4">好</a></span>（<span class="lypinyin">hào</span>）：动词，喜欢，偏爱。</p>
+<p><span class="lyterm"><a href="#hao4">好</a></span>（<span class="lypinyin">hào</span>）：动词，喜欢，偏爱，易于。</p>
 </li>
 <li><p><a id="xian3"></a><span class="lyterm">鲜</span>（<span class="lypinyin">xiǎn</span>）：稀少，少有。<span class="lyexample"><span>【例】</span><span>成语“鲜为人知”。</span></span></p></li>
 <li><p><a id="nzhiv"></a><span class="lyterm">未之有也</span>：“未有之也”的倒装。代词<span class="lyterm">之</span>在否定句中做宾语时，常会提到动词V与否定词N中间，形成“N之V”的倒装结构，增强了否定的语气。否定词是未、莫时，这种结构尤其常见。<span class="lyexample"><span>【例】</span><span><a href="#5.14" class="lyref">5.14</a> <span class="lyq">子路有闻，未之能行，唯恐有闻。</span><a href="#13.15" class="lyref">13.15</a> <span class="lyq">如其善而莫之违也，不亦善乎？</span>《礼记·礼器》：<span class="lyq">故作事不以礼，弗之敬矣；出言不以礼，弗之信矣。</span></span></span></p></li>
@@ -1414,6 +1414,7 @@ img.characterimg {
 </li>
 <li><p><a id="she4a"></a><span class="lyterm"><a href="#she4">摄</a></span>：兼职，代理。<span class="lyexample"><span>【例】</span><span>《清史稿·史贻直列传》：<span class="lyq">贻直乞致仕，命不必兼摄工部，岁加俸五百金。</span>（<a href="#zhi4">致</a><a href="#shi4a">仕</a>：辞官。）“摄政”指暂代君主处理国政，如<a href="#zhougong">周公</a>曾为<a href="#chengwang">周成王</a>摄政，清朝多尔衮为顺治帝摄政。</span></span></p></li>
 <li><p><span class="lyterm">树塞门</span>：兴造影壁墙。<span class="lyterm">树</span>：动词，建立，树立。<span class="lyexample"><span>【例】</span><span>成语“独树一帜”。</span></span><a id="saimen"></a><span class="lyterm">塞门</span>：天子或诸侯建在门口的短墙，以隔内外，也叫<a href="#xiaoqiang">萧墙</a>。</p></li>
+<li><p><span class="lyterm"><a href="#wei2b">为</a>（<span class="lypinyin">wéi</span>）两君之好</span>：举行（与别国之间的）两国国君友好盟会。<span class="lyterm">好</span>：友好和睦，借指好会，友好盟会。<span class="lyexample"><span>【例】</span><span>《史记·孔子世家》：<span class="lyq">〔齐〕乃使使告鲁为好会，会于夹谷。</span></span></span></p></li>
 <li><p><span class="lyterm">反坫</span>（<span class="lypinyin">diàn</span>）：饮酒后放置空杯的土台，是国君间宴饮的专用之物。</p></li>
 </ul></div>
 </div>
@@ -2181,13 +2182,13 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
 <p><a id="zhi4f"></a><span class="lyterm">质</span>：质地，引申指人内在的、不经修饰的天性、本质。</p>
-<p><span class="lyterm">文</span>：文采，引申指人经过后天教养学习后，流露于外的仪态风度。<span class="lyseealso"><span>【参】</span><span>《圣经·旧约·箴言》25:11：<span class="lyqe">A word fitly spoken is like apples of gold in pictures of silver.</span>（<span class="lyq">一句话说得合宜，就如金苹果在银网子里。</span>）</span></span></p>
+<p><span class="lyterm">文</span>：文采，引申指人经过后天教养学习后，流露于外的仪态风度。</p>
 </li>
 <li>
 <p><span class="lyterm">野</span>：质朴率性，也含有不懂规矩的意味。</p>
 <p><a id="shi3b"></a><span class="lyterm">史</span>：文辞繁复，引申为浮夸虚饰。<span class="lyseealso"><span>【参】</span><span>《仪礼·聘礼》：<span class="lyq">辞无常，<a href="#xun4">孙</a>而说。辞多则史，少则不达。辞苟足以达，义之至也。</span></span></span></p>
 </li>
-<li><p><span class="lyterm">彬</span>：荟萃，美盛，这里指文质合宜，相得益彰。成语“文质彬彬”形容人文雅有教养的样子。</p></li>
+<li><p><span class="lyterm">彬</span>：荟萃，美盛，这里指文质合宜，相得益彰。成语“文质彬彬”形容人文雅有教养的样子。<span class="lyseealso"><span>【参】</span><span>《圣经·旧约·箴言》25:11：<span class="lyqe">A word fitly spoken is like apples of gold in pictures of silver.</span>（<span class="lyq">一句话说得合宜，就如金苹果在银网子里。</span>）</span></span></p></li>
 </ul></div>
 </div>
 <a id="6.19"></a><div class="lyblob">
@@ -4318,7 +4319,7 @@ img.characterimg {
 <p>这里“有耻”修饰“行己”。在现代语境中，还可以把“行己有耻”理解为并列结构，行己就是做（真的）自己，be your (best) self，也很有意义。</p>
 <div class="lyseealso">
 <p><span>【参】</span><span>顾炎武《与友人论学书》中，高度推崇“博学”、“有耻”：<span class="lyq">愚所谓圣人之道者如之何？曰“<a href="#6.27">博学于文</a>”，曰“行己有耻”。自一身以至于天下国家，皆学之事也；自子臣弟友以至出入、往来、辞受、取与之间，皆有耻之事也。耻之于人大矣！不<a href="#4.9">耻恶衣恶食</a>，而<a href="#yitianxiaweijiren">耻匹夫匹妇之不被其泽</a>。</span></span></p>
-<p>使于四方不辱君命，是外交使节的荣誉所在。西汉的苏武被匈奴羁留19年，执节牧羊，坚贞不屈，<span class="lyq">始以强壮出，及还，须发尽白</span>，赢得一致的尊重。（《汉书·苏武传》。）1793年代表英国首次使华的乔治·马戛尔尼（George Macartney）也在其日记中写道：<span class="lyq">吾禀命东来，与本国政府相距既远，事事均须斟酌独断，万一处理不当，必贻国际之羞。</span>（《乾隆英使觐见记》，刘半农译。）</p>
+<p>使于四方不辱君命，是外交使节的荣誉所在。西汉的苏武被匈奴羁留19年，执节牧羊，坚贞不屈，<span class="lyq">始以强壮出，及还，须发尽白</span>，赢得一致的尊重。（《汉书·苏武传》。）1793年代表英国首次使华的乔治·马戛尔尼（George Macartney）也在其日记中写道：<span class="lyq">吾禀命东来，与本国政府相距既远，事事均须斟酌独断，万一处理不当，必贻国际之羞。</span>（《乾隆英使觐见记》，刘半农译。）后来有熟语“不辱使命”。</p>
 <p>有耻属于修身，使不辱命属于事功，这是孔子心中“士”的两面，也是儒家<a href="#xian2">贤人</a>的两面。而根据 <a href="#13.5" class="lyref">13.5</a> ，博学于文也应当学以致用。所以明代吕坤的《呻吟语·问学》主张：<span class="lyq">道理书尽读，事务书多读，文章书少读，闲杂书休读，邪妄书焚之可也。</span>（文章书：指偏于文学技巧的诗词歌赋作品。）共通的观点在不同时代有特定的表述，例如1958年建校的中国科学技术大学，校训就是“红专并进，理实交融”。</p>
 </div>
 </li>
